# gigachat-in-telegram

./: .gitignore  README.md  pyproject.toml
gigachat_in_telegram/: ai.py  env.py  options.py  run.py
